--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,12 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <welcome-file-list>
-        <welcome-file>jsp/signUpPage.jsp</welcome-file>
-    </welcome-file-list>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:applicationContext.xml,classpath*:META-INF/spring-hibernate.xml</param-value>
+        <param-value>classpath*:applicationContext.xml,classpath*:spring-hibernate.xml</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -18,7 +15,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath*:META-INF/spring-mvc.cfg.xml</param-value>
+            <param-value>classpath*:spring-mvc.cfg.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
