--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,6 +7,9 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath*:applicationContext.xml,classpath*:spring-hibernate.xml</param-value>
     </context-param>
+    <welcome-file-list>
+        <welcome-file>/WEB-INF/jsp/index.jsp</welcome-file>
+    </welcome-file-list>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
@@ -21,7 +24,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>*.signUp</url-pattern>
+        <url-pattern>*.action</url-pattern>
     </servlet-mapping>
 
     <!-- Spring字符集过滤 -->
